# test-rtsx

./: .gitignore  .prettierignore  Cargo.toml  Justfile  build.rs  docker-compose.deps.yml  package-lock.json  package.json  playwright.config.ts  rust-toolchain.toml  rustfmt.toml  tailwind.config.js
.github/workflows/: check.yml
acceptance/: index.spec.ts
settings/: base.toml
src/: database.rs  lib.rs  main.rs  router.rs  settings.rs  tracing.rs
src/web/: dashboard.rs  error.rs  health.rs  layout.rs  mod.rs
