[package]
name = "anthill"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.17"
color-eyre = "0.6.2"
config = { version = "0.13.2", features = ["toml"] }
eyre = "0.6.8"
listenfd = "1.0.0"
maud = { version = "0.24.0", features = ["axum"] }
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.11.0", features = ["tls"] }
serde = { version = "1.0.147", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal"] }
tonic = { version = "0.8.2", features = ["tls", "tls-roots"] }
tower-http = { version = "0.3.4", features = ["tracing", "trace"] }
tracing-opentelemetry = "0.18.0"
tracing-subscriber = "0.3.16"
